@@ -1,6 +1,7 @@
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.8
     - Changed SIR to single instance application
     - Improved saving "Exif.Image.Orientation" metadata tag
+    - Improved view in details for Aperture, Exposure Time and Exposure Bias metadata
     - Removed setting empty dcraw path string after browse cancel
     - Fixed left arrow shortcut for previous image in PreviewDialog
     - Fixed no files with lowercase extension in "Add File" dialog
